syntax = "proto3";

package engine;

import "const.proto";
import "google/api/annotations.proto";

service QueueBucketService {
    // Create QueueBucket
    rpc CreateQueueBucket (CreateQueueBucketRequest) returns (QueueBucket) {
        option (google.api.http) = {
            post: "/call_center/queues/{queue_id}/buckets"
            body: "*"
        };
    }
    // SearchQueueRouting
    rpc SearchQueueBucket(SearchQueueBucketRequest) returns (ListQueueBucket) {
        option (google.api.http) = {
            get: "/call_center/queues/{queue_id}/buckets"
        };
    }
    // ReadQueueRouting
    rpc ReadQueueBucket(ReadQueueBucketRequest) returns (QueueBucket) {
        option (google.api.http) = {
            get: "/call_center/queues/{queue_id}/buckets/{id}"
        };
    }
    // UpdateQueueBucket
    rpc UpdateQueueBucket(UpdateQueueBucketRequest) returns (QueueBucket) {
        option (google.api.http) = {
            put: "/call_center/queues/{queue_id}/buckets/{id}"
            body: "*"
        };
    }
    // DeleteQueueRouting
    rpc DeleteQueueBucket(DeleteQueueBucketRequest) returns (QueueBucket) {
        option (google.api.http) = {
            delete: "/call_center/queues/{queue_id}/buckets/{id}"
        };
    }
}

message DeleteQueueBucketRequest {
    int64 id = 1;
    int64 queue_id = 2;
    int64 domain_id = 3;
}

message UpdateQueueBucketRequest {
    int64 id = 1;
    int64 queue_id = 2;
    int32 ratio = 3;
    Lookup bucket = 4;
    int64 domain_id = 5;
}

message SearchQueueBucketRequest {
    int64 queue_id = 1;
    int32 size = 2;
    int32 page = 3;
    int64 domain_id = 4;
}

message ListQueueBucket {
    repeated QueueBucket items = 1;
}

message ReadQueueBucketRequest {
    int64 id = 1;
    int64 queue_id = 2;
    int64 domain_id = 3;
}

message CreateQueueBucketRequest {
    int64 queue_id = 1;
    int32 ratio = 2;
    Lookup bucket = 3;
    int64 domain_id = 4;
}

message QueueBucket {
    int64 id = 1;
    int32 ratio = 2;
    Lookup bucket = 3;
}